2005-08-03  Martin Hunt  <hunt@redhat.com>

	* configure.ac: Add stp_check to AC_CONFIG_FILES.
	* stp_check.in : New file.

2005-08-03  Frank Ch. Eigler  <fche@elastic.org>

	* README: Be more specific about prerequisites.
	* tapset/builtin_string.stp: New builtin.
	* testsuite/buildok/seven.stp, semko/eighteen.stp: New tests.

2005-08-03  Roland McGrath  <roland@redhat.com>

	* configure.ac, systemtap.spec.in: Version 0.2.1.
	* Makefile.in, aclocal.m4, configure: Regenerated.

2005-08-02  Roland McGrath  <roland@redhat.com>

	* loc2c.c (emit_bitfield): Return bool, value from emit_base_fetch.
	(c_translate_fetch): Update caller.
	(c_translate_pointer): Never ignore emit_base_fetch return value.

	* systemtap.spec.in (%install): Remove parameters after %makeinstall.

2005-08-02  Frank Ch. Eigler  <fche@elastic.org>

	* loc2.c (emit_loc_address): Emit interleaved declaration into
	its own nested { } block.
	* tapsets.cxx (literal_stmt_for_local): Emit deref_fault block
	unconditionally.
	* tapset/builtin_hexstring.stp: New builtin.
	* testsuite/buildok/six.stp: New test.

2005-08-02  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (emit_registrations): Treat module_name="kernel"
	as if module_name="".

2005-08-01  Graydon Hoare  <graydon@redhat.com>

	* staptree.{cxx,h} (probe_point::component): Add a ctor.
	* tapsets.cxx (dwarf_derived_probe): Synthesize concrete
	probe_point for matched pattern.
	(dwarf_probe_type)
	(dwarf_query::add_kernel_probe)
	(dwarf_query::add_module_probe): Remove, they were noise.
	(dwflpp::module_name_matches): Don't call get_module_dwarf().

2005-08-01  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx: Support ".return" option for function probe points.
	* testuite/buildok/five.stp: Try it.

2005-08-01  Frank Ch. Eigler  <fche@elastic.org>

	* elaborate.cxx (derive_probes, semantic_pass_symbols): Improve
	error message specificity.
	* translate.cxx (emit_module_init): Compact partial registration
	recovery code.